parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    BREAK
    CASE
    COMMENT
    CONTINUE
    EXTENDS
    FINAL
    IMPLEMENTS
    MODULE
    QMARK_DOT
    SQUOTE
    SWITCH
    THEN

Grammar

Rule 0     S' -> program
Rule 1     program -> declaration_list
Rule 2     declaration_list -> declaration_list declaration
Rule 3     declaration_list -> empty
Rule 4     declaration -> class
Rule 5     declaration -> function_declaration
Rule 6     declaration -> variable_declaration SEMICOLON
Rule 7     declaration -> import_statement
Rule 8     declaration -> const_declaration SEMICOLON
Rule 9     import_statement -> IMPORT STRING_LITERAL SEMICOLON
Rule 10    const_declaration -> CONST declaration_type ID EQUALS expression
Rule 11    class -> CLASS ID LBRACE class_body RBRACE
Rule 12    class_body -> class_member class_body
Rule 13    class_body -> empty
Rule 14    class_member -> class_property
Rule 15    class_member -> function_declaration
Rule 16    class_member -> constructor_declaration
Rule 17    function_declaration -> declaration_type function_name LPAREN parameters RPAREN LBRACE body RBRACE
Rule 18    function_name -> ID
Rule 19    function_name -> MAIN
Rule 20    class_property -> declaration_type ID SEMICOLON
Rule 21    constructor_declaration -> ID LPAREN constructor_params RPAREN SEMICOLON
Rule 22    constructor_params -> constructor_param_list
Rule 23    constructor_params -> empty
Rule 24    constructor_param_list -> constructor_param_list COMMA constructor_param
Rule 25    constructor_param_list -> constructor_param
Rule 26    constructor_param -> THIS DOT ID
Rule 27    declaration_type -> primitive_type
Rule 28    declaration_type -> generic_type
Rule 29    declaration_type -> type_nullable
Rule 30    declaration_type -> ID
Rule 31    primitive_type -> INT
Rule 32    primitive_type -> DOUBLE
Rule 33    primitive_type -> STRING
Rule 34    primitive_type -> BOOL
Rule 35    primitive_type -> VOID
Rule 36    primitive_type -> VAR
Rule 37    primitive_type -> DYNAMIC
Rule 38    generic_type -> ID MINSIGN type_list MAXSIGN
Rule 39    type_nullable -> primitive_type QMARK
Rule 40    expression -> expression NULLCOALESCING expression
Rule 41    type_list -> type_list COMMA declaration_type
Rule 42    type_list -> declaration_type
Rule 43    expression -> expression AND expression
Rule 44    expression -> expression OR expression
Rule 45    expression -> expression EQEQ expression
Rule 46    expression -> expression NEQ expression
Rule 47    expression -> expression MINSIGN expression
Rule 48    expression -> expression MAXSIGN expression
Rule 49    expression -> expression MINSIGNEQ expression
Rule 50    expression -> expression MAXSIGNEQ expression
Rule 51    expression -> expression IS declaration_type
Rule 52    expression -> expression IS NOT declaration_type
Rule 53    expression -> NOT expression
Rule 54    expression -> MINUS expression
Rule 55    expression -> expression PLUSPLUS
Rule 56    expression -> expression MINUSMINUS
Rule 57    expression -> expression DOT ID
Rule 58    expression -> expression LBRACKET expression RBRACKET
Rule 59    expression -> expression LPAREN arguments RPAREN
Rule 60    arguments -> expression_list
Rule 61    arguments -> empty
Rule 62    expression -> expression NOT
Rule 63    expression -> expression PLUS expression
Rule 64    expression -> expression MINUS expression
Rule 65    expression -> expression TIMES expression
Rule 66    expression -> expression DIVIDE expression
Rule 67    expression -> expression INTDIV expression
Rule 68    expression -> term
Rule 69    term -> factor
Rule 70    factor -> primitive_type DOT ID LPAREN arguments RPAREN
Rule 71    factor -> NUMBER
Rule 72    factor -> STRING_LITERAL
Rule 73    factor -> ID
Rule 74    factor -> TRUE
Rule 75    factor -> FALSE
Rule 76    factor -> LPAREN expression RPAREN
Rule 77    instructions -> instruction instructions
Rule 78    instructions -> empty
Rule 79    instruction -> variable_declaration SEMICOLON
Rule 80    instruction -> expression SEMICOLON
Rule 81    instruction -> print_statement
Rule 82    instruction -> if_else
Rule 83    instruction -> while_loop
Rule 84    instruction -> for_loop
Rule 85    instruction -> return_statement
Rule 86    instruction -> block_statement
Rule 87    instruction -> throw_statement
Rule 88    instruction -> try_statement
Rule 89    instruction -> const_declaration SEMICOLON
Rule 90    block_statement -> LBRACE instructions RBRACE
Rule 91    throw_statement -> THROW expression SEMICOLON
Rule 92    variable_declaration -> declaration_type ID
Rule 93    variable_declaration -> declaration_type ID EQUALS expression
Rule 94    expression -> expression EQUALS expression
Rule 95    expression -> expression PLUSEQ expression
Rule 96    expression -> expression MINUSEQ expression
Rule 97    expression -> expression TIMESEQ expression
Rule 98    expression -> expression DIVEQ expression
Rule 99    expression -> expression NULLASSIGN expression
Rule 100   expression -> expression QMARK expression COLON expression
Rule 101   print_statement -> PRINT LPAREN expression RPAREN SEMICOLON
Rule 102   parameters -> parameters COMMA declaration_type ID
Rule 103   parameters -> declaration_type ID
Rule 104   parameters -> empty
Rule 105   return_statement -> RETURN expression SEMICOLON
Rule 106   return_statement -> RETURN SEMICOLON
Rule 107   body -> instructions
Rule 108   if_else -> IF LPAREN expression RPAREN instruction
Rule 109   if_else -> IF LPAREN expression RPAREN instruction ELSE instruction
Rule 110   while_loop -> WHILE LPAREN expression RPAREN instruction
Rule 111   for_loop -> FOR LPAREN for_initializer SEMICOLON expression_opt SEMICOLON expression_opt RPAREN instruction
Rule 112   for_initializer -> variable_declaration
Rule 113   for_initializer -> expression
Rule 114   for_initializer -> empty
Rule 115   expression_opt -> expression
Rule 116   expression_opt -> empty
Rule 117   expression -> LBRACKET expression_list RBRACKET
Rule 118   expression -> LBRACE set_or_map_contents RBRACE
Rule 119   set_or_map_contents -> expression set_or_map_tail
Rule 120   set_or_map_contents -> empty
Rule 121   set_or_map_tail -> COLON expression map_tail
Rule 122   set_or_map_tail -> set_tail
Rule 123   map_tail -> COMMA map_entries
Rule 124   map_tail -> empty
Rule 125   map_entries -> map_entries COMMA map_entry
Rule 126   map_entries -> map_entry
Rule 127   map_entry -> expression COLON expression
Rule 128   set_tail -> COMMA expression_list
Rule 129   set_tail -> empty
Rule 130   expression_list -> expression COMMA expression_list
Rule 131   expression_list -> expression
Rule 132   expression_list -> empty
Rule 133   try_statement -> TRY block_statement catch_clauses
Rule 134   try_statement -> TRY block_statement catch_clauses finally_clause
Rule 135   try_statement -> TRY block_statement finally_clause
Rule 136   catch_clauses -> catch_clauses catch_clause
Rule 137   catch_clauses -> catch_clause
Rule 138   catch_clause -> CATCH LPAREN ID ID RPAREN block_statement
Rule 139   catch_clause -> CATCH LPAREN ID RPAREN block_statement
Rule 140   finally_clause -> FINALLY block_statement
Rule 141   empty -> <empty>

Terminals, with rules where they appear

AND                  : 43
BOOL                 : 34
BREAK                : 
CASE                 : 
CATCH                : 138 139
CLASS                : 11
COLON                : 100 121 127
COMMA                : 24 41 102 123 125 128 130
COMMENT              : 
CONST                : 10
CONTINUE             : 
DIVEQ                : 98
DIVIDE               : 66
DOT                  : 26 57 70
DOUBLE               : 32
DYNAMIC              : 37
ELSE                 : 109
EQEQ                 : 45
EQUALS               : 10 93 94
EXTENDS              : 
FALSE                : 75
FINAL                : 
FINALLY              : 140
FOR                  : 111
ID                   : 10 11 18 20 21 26 30 38 57 70 73 92 93 102 103 138 138 139
IF                   : 108 109
IMPLEMENTS           : 
IMPORT               : 9
INT                  : 31
INTDIV               : 67
IS                   : 51 52
LBRACE               : 11 17 90 118
LBRACKET             : 58 117
LPAREN               : 17 21 59 70 76 101 108 109 110 111 138 139
MAIN                 : 19
MAXSIGN              : 38 48
MAXSIGNEQ            : 50
MINSIGN              : 38 47
MINSIGNEQ            : 49
MINUS                : 54 64
MINUSEQ              : 96
MINUSMINUS           : 56
MODULE               : 
NEQ                  : 46
NOT                  : 52 53 62
NULLASSIGN           : 99
NULLCOALESCING       : 40
NUMBER               : 71
OR                   : 44
PLUS                 : 63
PLUSEQ               : 95
PLUSPLUS             : 55
PRINT                : 101
QMARK                : 39 100
QMARK_DOT            : 
RBRACE               : 11 17 90 118
RBRACKET             : 58 117
RETURN               : 105 106
RPAREN               : 17 21 59 70 76 101 108 109 110 111 138 139
SEMICOLON            : 6 8 9 20 21 79 80 89 91 101 105 106 111 111
SQUOTE               : 
STRING               : 33
STRING_LITERAL       : 9 72
SWITCH               : 
THEN                 : 
THIS                 : 26
THROW                : 91
TIMES                : 65
TIMESEQ              : 97
TRUE                 : 74
TRY                  : 133 134 135
VAR                  : 36
VOID                 : 35
WHILE                : 110
error                : 

Nonterminals, with rules where they appear

arguments            : 59 70
block_statement      : 86 133 134 135 138 139 140
body                 : 17
catch_clause         : 136 137
catch_clauses        : 133 134 136
class                : 4
class_body           : 11 12
class_member         : 12
class_property       : 14
const_declaration    : 8 89
constructor_declaration : 16
constructor_param    : 24 25
constructor_param_list : 22 24
constructor_params   : 21
declaration          : 2
declaration_list     : 1 2
declaration_type     : 10 17 20 41 42 51 52 92 93 102 103
empty                : 3 13 23 61 78 104 114 116 120 124 129 132
expression           : 10 40 40 43 43 44 44 45 45 46 46 47 47 48 48 49 49 50 50 51 52 53 54 55 56 57 58 58 59 62 63 63 64 64 65 65 66 66 67 67 76 80 91 93 94 94 95 95 96 96 97 97 98 98 99 99 100 100 100 101 105 108 109 110 113 115 119 121 127 127 130 131
expression_list      : 60 117 128 130
expression_opt       : 111 111
factor               : 69
finally_clause       : 134 135
for_initializer      : 111
for_loop             : 84
function_declaration : 5 15
function_name        : 17
generic_type         : 28
if_else              : 82
import_statement     : 7
instruction          : 77 108 109 109 110 111
instructions         : 77 90 107
map_entries          : 123 125
map_entry            : 125 126
map_tail             : 121
parameters           : 17 102
primitive_type       : 27 39 70
print_statement      : 81
program              : 0
return_statement     : 85
set_or_map_contents  : 118
set_or_map_tail      : 119
set_tail             : 122
term                 : 68
throw_statement      : 87
try_statement        : 88
type_list            : 38 41
type_nullable        : 29
variable_declaration : 6 79 112
while_loop           : 83

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . declaration_list
    (2) declaration_list -> . declaration_list declaration
    (3) declaration_list -> . empty
    (141) empty -> .

    CLASS           reduce using rule 141 (empty -> .)
    IMPORT          reduce using rule 141 (empty -> .)
    CONST           reduce using rule 141 (empty -> .)
    ID              reduce using rule 141 (empty -> .)
    INT             reduce using rule 141 (empty -> .)
    DOUBLE          reduce using rule 141 (empty -> .)
    STRING          reduce using rule 141 (empty -> .)
    BOOL            reduce using rule 141 (empty -> .)
    VOID            reduce using rule 141 (empty -> .)
    VAR             reduce using rule 141 (empty -> .)
    DYNAMIC         reduce using rule 141 (empty -> .)
    $end            reduce using rule 141 (empty -> .)

    program                        shift and go to state 1
    declaration_list               shift and go to state 2
    empty                          shift and go to state 3

state 1

    (0) S' -> program .



state 2

    (1) program -> declaration_list .
    (2) declaration_list -> declaration_list . declaration
    (4) declaration -> . class
    (5) declaration -> . function_declaration
    (6) declaration -> . variable_declaration SEMICOLON
    (7) declaration -> . import_statement
    (8) declaration -> . const_declaration SEMICOLON
    (11) class -> . CLASS ID LBRACE class_body RBRACE
    (17) function_declaration -> . declaration_type function_name LPAREN parameters RPAREN LBRACE body RBRACE
    (92) variable_declaration -> . declaration_type ID
    (93) variable_declaration -> . declaration_type ID EQUALS expression
    (9) import_statement -> . IMPORT STRING_LITERAL SEMICOLON
    (10) const_declaration -> . CONST declaration_type ID EQUALS expression
    (27) declaration_type -> . primitive_type
    (28) declaration_type -> . generic_type
    (29) declaration_type -> . type_nullable
    (30) declaration_type -> . ID
    (31) primitive_type -> . INT
    (32) primitive_type -> . DOUBLE
    (33) primitive_type -> . STRING
    (34) primitive_type -> . BOOL
    (35) primitive_type -> . VOID
    (36) primitive_type -> . VAR
    (37) primitive_type -> . DYNAMIC
    (38) generic_type -> . ID MINSIGN type_list MAXSIGN
    (39) type_nullable -> . primitive_type QMARK

    $end            reduce using rule 1 (program -> declaration_list .)
    CLASS           shift and go to state 10
    IMPORT          shift and go to state 13
    CONST           shift and go to state 14
    ID              shift and go to state 11
    INT             shift and go to state 18
    DOUBLE          shift and go to state 19
    STRING          shift and go to state 20
    BOOL            shift and go to state 21
    VOID            shift and go to state 22
    VAR             shift and go to state 23
    DYNAMIC         shift and go to state 24

    declaration                    shift and go to state 4
    class                          shift and go to state 5
    function_declaration           shift and go to state 6
    variable_declaration           shift and go to state 7
    import_statement               shift and go to state 8
    const_declaration              shift and go to state 9
    declaration_type               shift and go to state 12
    primitive_type                 shift and go to state 15
    generic_type                   shift and go to state 16
    type_nullable                  shift and go to state 17

state 3

    (3) declaration_list -> empty .

    CLASS           reduce using rule 3 (declaration_list -> empty .)
    IMPORT          reduce using rule 3 (declaration_list -> empty .)
    CONST           reduce using rule 3 (declaration_list -> empty .)
    ID              reduce using rule 3 (declaration_list -> empty .)
    INT             reduce using rule 3 (declaration_list -> empty .)
    DOUBLE          reduce using rule 3 (declaration_list -> empty .)
    STRING          reduce using rule 3 (declaration_list -> empty .)
    BOOL            reduce using rule 3 (declaration_list -> empty .)
    VOID            reduce using rule 3 (declaration_list -> empty .)
    VAR             reduce using rule 3 (declaration_list -> empty .)
    DYNAMIC         reduce using rule 3 (declaration_list -> empty .)
    $end            reduce using rule 3 (declaration_list -> empty .)


state 4

    (2) declaration_list -> declaration_list declaration .

    CLASS           reduce using rule 2 (declaration_list -> declaration_list declaration .)
    IMPORT          reduce using rule 2 (declaration_list -> declaration_list declaration .)
    CONST           reduce using rule 2 (declaration_list -> declaration_list declaration .)
    ID              reduce using rule 2 (declaration_list -> declaration_list declaration .)
    INT             reduce using rule 2 (declaration_list -> declaration_list declaration .)
    DOUBLE          reduce using rule 2 (declaration_list -> declaration_list declaration .)
    STRING          reduce using rule 2 (declaration_list -> declaration_list declaration .)
    BOOL            reduce using rule 2 (declaration_list -> declaration_list declaration .)
    VOID            reduce using rule 2 (declaration_list -> declaration_list declaration .)
    VAR             reduce using rule 2 (declaration_list -> declaration_list declaration .)
    DYNAMIC         reduce using rule 2 (declaration_list -> declaration_list declaration .)
    $end            reduce using rule 2 (declaration_list -> declaration_list declaration .)


state 5

    (4) declaration -> class .

    CLASS           reduce using rule 4 (declaration -> class .)
    IMPORT          reduce using rule 4 (declaration -> class .)
    CONST           reduce using rule 4 (declaration -> class .)
    ID              reduce using rule 4 (declaration -> class .)
    INT             reduce using rule 4 (declaration -> class .)
    DOUBLE          reduce using rule 4 (declaration -> class .)
    STRING          reduce using rule 4 (declaration -> class .)
    BOOL            reduce using rule 4 (declaration -> class .)
    VOID            reduce using rule 4 (declaration -> class .)
    VAR             reduce using rule 4 (declaration -> class .)
    DYNAMIC         reduce using rule 4 (declaration -> class .)
    $end            reduce using rule 4 (declaration -> class .)


state 6

    (5) declaration -> function_declaration .

    CLASS           reduce using rule 5 (declaration -> function_declaration .)
    IMPORT          reduce using rule 5 (declaration -> function_declaration .)
    CONST           reduce using rule 5 (declaration -> function_declaration .)
    ID              reduce using rule 5 (declaration -> function_declaration .)
    INT             reduce using rule 5 (declaration -> function_declaration .)
    DOUBLE          reduce using rule 5 (declaration -> function_declaration .)
    STRING          reduce using rule 5 (declaration -> function_declaration .)
    BOOL            reduce using rule 5 (declaration -> function_declaration .)
    VOID            reduce using rule 5 (declaration -> function_declaration .)
    VAR             reduce using rule 5 (declaration -> function_declaration .)
    DYNAMIC         reduce using rule 5 (declaration -> function_declaration .)
    $end            reduce using rule 5 (declaration -> function_declaration .)


state 7

    (6) declaration -> variable_declaration . SEMICOLON

    SEMICOLON       shift and go to state 25


state 8

    (7) declaration -> import_statement .

    CLASS           reduce using rule 7 (declaration -> import_statement .)
    IMPORT          reduce using rule 7 (declaration -> import_statement .)
    CONST           reduce using rule 7 (declaration -> import_statement .)
    ID              reduce using rule 7 (declaration -> import_statement .)
    INT             reduce using rule 7 (declaration -> import_statement .)
    DOUBLE          reduce using rule 7 (declaration -> import_statement .)
    STRING          reduce using rule 7 (declaration -> import_statement .)
    BOOL            reduce using rule 7 (declaration -> import_statement .)
    VOID            reduce using rule 7 (declaration -> import_statement .)
    VAR             reduce using rule 7 (declaration -> import_statement .)
    DYNAMIC         reduce using rule 7 (declaration -> import_statement .)
    $end            reduce using rule 7 (declaration -> import_statement .)


state 9

    (8) declaration -> const_declaration . SEMICOLON

    SEMICOLON       shift and go to state 26


state 10

    (11) class -> CLASS . ID LBRACE class_body RBRACE

    ID              shift and go to state 27


state 11

    (30) declaration_type -> ID .
    (38) generic_type -> ID . MINSIGN type_list MAXSIGN

  ! shift/reduce conflict for MINSIGN resolved as shift
    ID              reduce using rule 30 (declaration_type -> ID .)
    MAIN            reduce using rule 30 (declaration_type -> ID .)
    MAXSIGN         reduce using rule 30 (declaration_type -> ID .)
    COMMA           reduce using rule 30 (declaration_type -> ID .)
    NULLCOALESCING  reduce using rule 30 (declaration_type -> ID .)
    AND             reduce using rule 30 (declaration_type -> ID .)
    OR              reduce using rule 30 (declaration_type -> ID .)
    EQEQ            reduce using rule 30 (declaration_type -> ID .)
    NEQ             reduce using rule 30 (declaration_type -> ID .)
    MINSIGNEQ       reduce using rule 30 (declaration_type -> ID .)
    MAXSIGNEQ       reduce using rule 30 (declaration_type -> ID .)
    IS              reduce using rule 30 (declaration_type -> ID .)
    PLUSPLUS        reduce using rule 30 (declaration_type -> ID .)
    MINUSMINUS      reduce using rule 30 (declaration_type -> ID .)
    DOT             reduce using rule 30 (declaration_type -> ID .)
    LBRACKET        reduce using rule 30 (declaration_type -> ID .)
    LPAREN          reduce using rule 30 (declaration_type -> ID .)
    NOT             reduce using rule 30 (declaration_type -> ID .)
    PLUS            reduce using rule 30 (declaration_type -> ID .)
    MINUS           reduce using rule 30 (declaration_type -> ID .)
    TIMES           reduce using rule 30 (declaration_type -> ID .)
    DIVIDE          reduce using rule 30 (declaration_type -> ID .)
    INTDIV          reduce using rule 30 (declaration_type -> ID .)
    EQUALS          reduce using rule 30 (declaration_type -> ID .)
    PLUSEQ          reduce using rule 30 (declaration_type -> ID .)
    MINUSEQ         reduce using rule 30 (declaration_type -> ID .)
    TIMESEQ         reduce using rule 30 (declaration_type -> ID .)
    DIVEQ           reduce using rule 30 (declaration_type -> ID .)
    NULLASSIGN      reduce using rule 30 (declaration_type -> ID .)
    QMARK           reduce using rule 30 (declaration_type -> ID .)
    SEMICOLON       reduce using rule 30 (declaration_type -> ID .)
    RBRACKET        reduce using rule 30 (declaration_type -> ID .)
    RPAREN          reduce using rule 30 (declaration_type -> ID .)
    COLON           reduce using rule 30 (declaration_type -> ID .)
    RBRACE          reduce using rule 30 (declaration_type -> ID .)
    MINSIGN         shift and go to state 28

  ! MINSIGN         [ reduce using rule 30 (declaration_type -> ID .) ]


state 12

    (17) function_declaration -> declaration_type . function_name LPAREN parameters RPAREN LBRACE body RBRACE
    (92) variable_declaration -> declaration_type . ID
    (93) variable_declaration -> declaration_type . ID EQUALS expression
    (18) function_name -> . ID
    (19) function_name -> . MAIN

    ID              shift and go to state 30
    MAIN            shift and go to state 31

    function_name                  shift and go to state 29

state 13

    (9) import_statement -> IMPORT . STRING_LITERAL SEMICOLON

    STRING_LITERAL  shift and go to state 32


state 14

    (10) const_declaration -> CONST . declaration_type ID EQUALS expression
    (27) declaration_type -> . primitive_type
    (28) declaration_type -> . generic_type
    (29) declaration_type -> . type_nullable
    (30) declaration_type -> . ID
    (31) primitive_type -> . INT
    (32) primitive_type -> . DOUBLE
    (33) primitive_type -> . STRING
    (34) primitive_type -> . BOOL
    (35) primitive_type -> . VOID
    (36) primitive_type -> . VAR
    (37) primitive_type -> . DYNAMIC
    (38) generic_type -> . ID MINSIGN type_list MAXSIGN
    (39) type_nullable -> . primitive_type QMARK

    ID              shift and go to state 11
    INT             shift and go to state 18
    DOUBLE          shift and go to state 19
    STRING          shift and go to state 20
    BOOL            shift and go to state 21
    VOID            shift and go to state 22
    VAR             shift and go to state 23
    DYNAMIC         shift and go to state 24

    declaration_type               shift and go to state 33
    primitive_type                 shift and go to state 15
    generic_type                   shift and go to state 16
    type_nullable                  shift and go to state 17

state 15

    (27) declaration_type -> primitive_type .
    (39) type_nullable -> primitive_type . QMARK

  ! shift/reduce conflict for QMARK resolved as shift
    ID              reduce using rule 27 (declaration_type -> primitive_type .)
    MAIN            reduce using rule 27 (declaration_type -> primitive_type .)
    MAXSIGN         reduce using rule 27 (declaration_type -> primitive_type .)
    COMMA           reduce using rule 27 (declaration_type -> primitive_type .)
    NULLCOALESCING  reduce using rule 27 (declaration_type -> primitive_type .)
    AND             reduce using rule 27 (declaration_type -> primitive_type .)
    OR              reduce using rule 27 (declaration_type -> primitive_type .)
    EQEQ            reduce using rule 27 (declaration_type -> primitive_type .)
    NEQ             reduce using rule 27 (declaration_type -> primitive_type .)
    MINSIGN         reduce using rule 27 (declaration_type -> primitive_type .)
    MINSIGNEQ       reduce using rule 27 (declaration_type -> primitive_type .)
    MAXSIGNEQ       reduce using rule 27 (declaration_type -> primitive_type .)
    IS              reduce using rule 27 (declaration_type -> primitive_type .)
    PLUSPLUS        reduce using rule 27 (declaration_type -> primitive_type .)
    MINUSMINUS      reduce using rule 27 (declaration_type -> primitive_type .)
    DOT             reduce using rule 27 (declaration_type -> primitive_type .)
    LBRACKET        reduce using rule 27 (declaration_type -> primitive_type .)
    LPAREN          reduce using rule 27 (declaration_type -> primitive_type .)
    NOT             reduce using rule 27 (declaration_type -> primitive_type .)
    PLUS            reduce using rule 27 (declaration_type -> primitive_type .)
    MINUS           reduce using rule 27 (declaration_type -> primitive_type .)
    TIMES           reduce using rule 27 (declaration_type -> primitive_type .)
    DIVIDE          reduce using rule 27 (declaration_type -> primitive_type .)
    INTDIV          reduce using rule 27 (declaration_type -> primitive_type .)
    EQUALS          reduce using rule 27 (declaration_type -> primitive_type .)
    PLUSEQ          reduce using rule 27 (declaration_type -> primitive_type .)
    MINUSEQ         reduce using rule 27 (declaration_type -> primitive_type .)
    TIMESEQ         reduce using rule 27 (declaration_type -> primitive_type .)
    DIVEQ           reduce using rule 27 (declaration_type -> primitive_type .)
    NULLASSIGN      reduce using rule 27 (declaration_type -> primitive_type .)
    SEMICOLON       reduce using rule 27 (declaration_type -> primitive_type .)
    RBRACKET        reduce using rule 27 (declaration_type -> primitive_type .)
    RPAREN          reduce using rule 27 (declaration_type -> primitive_type .)
    COLON           reduce using rule 27 (declaration_type -> primitive_type .)
    RBRACE          reduce using rule 27 (declaration_type -> primitive_type .)
    QMARK           shift and go to state 34

  ! QMARK           [ reduce using rule 27 (declaration_type -> primitive_type .) ]


state 16

    (28) declaration_type -> generic_type .

    ID              reduce using rule 28 (declaration_type -> generic_type .)
    MAIN            reduce using rule 28 (declaration_type -> generic_type .)
    MAXSIGN         reduce using rule 28 (declaration_type -> generic_type .)
    COMMA           reduce using rule 28 (declaration_type -> generic_type .)
    NULLCOALESCING  reduce using rule 28 (declaration_type -> generic_type .)
    AND             reduce using rule 28 (declaration_type -> generic_type .)
    OR              reduce using rule 28 (declaration_type -> generic_type .)
    EQEQ            reduce using rule 28 (declaration_type -> generic_type .)
    NEQ             reduce using rule 28 (declaration_type -> generic_type .)
    MINSIGN         reduce using rule 28 (declaration_type -> generic_type .)
    MINSIGNEQ       reduce using rule 28 (declaration_type -> generic_type .)
    MAXSIGNEQ       reduce using rule 28 (declaration_type -> generic_type .)
    IS              reduce using rule 28 (declaration_type -> generic_type .)
    PLUSPLUS        reduce using rule 28 (declaration_type -> generic_type .)
    MINUSMINUS      reduce using rule 28 (declaration_type -> generic_type .)
    DOT             reduce using rule 28 (declaration_type -> generic_type .)
    LBRACKET        reduce using rule 28 (declaration_type -> generic_type .)
    LPAREN          reduce using rule 28 (declaration_type -> generic_type .)
    NOT             reduce using rule 28 (declaration_type -> generic_type .)
    PLUS            reduce using rule 28 (declaration_type -> generic_type .)
    MINUS           reduce using rule 28 (declaration_type -> generic_type .)
    TIMES           reduce using rule 28 (declaration_type -> generic_type .)
    DIVIDE          reduce using rule 28 (declaration_type -> generic_type .)
    INTDIV          reduce using rule 28 (declaration_type -> generic_type .)
    EQUALS          reduce using rule 28 (declaration_type -> generic_type .)
    PLUSEQ          reduce using rule 28 (declaration_type -> generic_type .)
    MINUSEQ         reduce using rule 28 (declaration_type -> generic_type .)
    TIMESEQ         reduce using rule 28 (declaration_type -> generic_type .)
    DIVEQ           reduce using rule 28 (declaration_type -> generic_type .)
    NULLASSIGN      reduce using rule 28 (declaration_type -> generic_type .)
    QMARK           reduce using rule 28 (declaration_type -> generic_type .)
    SEMICOLON       reduce using rule 28 (declaration_type -> generic_type .)
    RBRACKET        reduce using rule 28 (declaration_type -> generic_type .)
    RPAREN          reduce using rule 28 (declaration_type -> generic_type .)
    COLON           reduce using rule 28 (declaration_type -> generic_type .)
    RBRACE          reduce using rule 28 (declaration_type -> generic_type .)


state 17

    (29) declaration_type -> type_nullable .

    ID              reduce using rule 29 (declaration_type -> type_nullable .)
    MAIN            reduce using rule 29 (declaration_type -> type_nullable .)
    MAXSIGN         reduce using rule 29 (declaration_type -> type_nullable .)
    COMMA           reduce using rule 29 (declaration_type -> type_nullable .)
    NULLCOALESCING  reduce using rule 29 (declaration_type -> type_nullable .)
    AND             reduce using rule 29 (declaration_type -> type_nullable .)
    OR              reduce using rule 29 (declaration_type -> type_nullable .)
    EQEQ            reduce using rule 29 (declaration_type -> type_nullable .)
    NEQ             reduce using rule 29 (declaration_type -> type_nullable .)
    MINSIGN         reduce using rule 29 (declaration_type -> type_nullable .)
    MINSIGNEQ       reduce using rule 29 (declaration_type -> type_nullable .)
    MAXSIGNEQ       reduce using rule 29 (declaration_type -> type_nullable .)
    IS              reduce using rule 29 (declaration_type -> type_nullable .)
    PLUSPLUS        reduce using rule 29 (declaration_type -> type_nullable .)
    MINUSMINUS      reduce using rule 29 (declaration_type -> type_nullable .)
    DOT             reduce using rule 29 (declaration_type -> type_nullable .)
    LBRACKET        reduce using rule 29 (declaration_type -> type_nullable .)
    LPAREN          reduce using rule 29 (declaration_type -> type_nullable .)
    NOT             reduce using rule 29 (declaration_type -> type_nullable .)
    PLUS            reduce using rule 29 (declaration_type -> type_nullable .)
    MINUS           reduce using rule 29 (declaration_type -> type_nullable .)
    TIMES           reduce using rule 29 (declaration_type -> type_nullable .)
    DIVIDE          reduce using rule 29 (declaration_type -> type_nullable .)
    INTDIV          reduce using rule 29 (declaration_type -> type_nullable .)
    EQUALS          reduce using rule 29 (declaration_type -> type_nullable .)
    PLUSEQ          reduce using rule 29 (declaration_type -> type_nullable .)
    MINUSEQ         reduce using rule 29 (declaration_type -> type_nullable .)
    TIMESEQ         reduce using rule 29 (declaration_type -> type_nullable .)
    DIVEQ           reduce using rule 29 (declaration_type -> type_nullable .)
    NULLASSIGN      reduce using rule 29 (declaration_type -> type_nullable .)
    QMARK           reduce using rule 29 (declaration_type -> type_nullable .)
    SEMICOLON       reduce using rule 29 (declaration_type -> type_nullable .)
    RBRACKET        reduce using rule 29 (declaration_type -> type_nullable .)
    RPAREN          reduce using rule 29 (declaration_type -> type_nullable .)
    COLON           reduce using rule 29 (declaration_type -> type_nullable .)
    RBRACE          reduce using rule 29 (declaration_type -> type_nullable .)


state 18

    (31) primitive_type -> INT .
